notebook to read in data sources; notebook to read in video from local file, save and display every 1000th frame

--- a/data.ipynb
+++ b/data.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -34,10 +34,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x1123aa240>"
+       "<IPython.lib.display.YouTubeVideo at 0x109a2c400>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,14 +45,13 @@
    "source": [
     "from IPython.display import YouTubeVideo\n",
     "\n",
-    "\n",
     "# Paine Run (Sheanandoah National Park, VA) Site 1\n",
     "YouTubeVideo('fkECV4XVOSE')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -70,10 +69,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x112456e80>"
+       "<IPython.lib.display.YouTubeVideo at 0x109b07a58>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -105,10 +104,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x112456940>"
+       "<IPython.lib.display.YouTubeVideo at 0x109afc828>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,15 +141,10 @@
    "source": [
     "Some more potentially useful video:\n",
     "\n",
-    "https://www.dropbox.com/s/z59zypycl2xcme1/deerfield%202.mp4?dl=0"
+    "https://www.dropbox.com/s/z59zypycl2xcme1/deerfield%202.mp4?dl=0\n",
+    "\n",
+    "#### (saved locally as `fishvid.mp4`)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -169,7 +163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
