--- a/data.ipynb
+++ b/data.ipynb
@@ -34,7 +34,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x109a2c400>"
+       "<IPython.lib.display.YouTubeVideo at 0x1068127b8>"
       ]
      },
      "execution_count": 1,
@@ -69,7 +69,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x109b07a58>"
+       "<IPython.lib.display.YouTubeVideo at 0x10662af28>"
       ]
      },
      "execution_count": 2,
@@ -104,7 +104,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x109afc828>"
+       "<IPython.lib.display.YouTubeVideo at 0x1068374a8>"
       ]
      },
      "execution_count": 3,
@@ -145,6 +145,125 @@
     "\n",
     "#### (saved locally as `fishvid.mp4`)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reading in video from a local file, saving and displaying every 1000th frame. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1000\n",
+      "2000\n",
+      "3000\n",
+      "4000\n",
+      "5000\n",
+      "6000\n",
+      "7000\n",
+      "8000\n",
+      "9000\n",
+      "10000\n",
+      "11000\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cv2\n",
+    "\n",
+    "vidcap = cv2.VideoCapture('fishvid.mp4')\n",
+    "success, image = vidcap.read()\n",
+    "\n",
+    "count = 0\n",
+    "while success:\n",
+    "    \n",
+    "    success, image = vidcap.read()\n",
+    "    # print('Read a new frame: ', success)\n",
+    " \n",
+    "    if count % 1000 == 0:\n",
+    "        print(count)\n",
+    "        \n",
+    "        # save frame as JPEG file \n",
+    "        # mkdir data beforehand\n",
+    "        cv2.imwrite(\"./data/frame%d.jpg\" % count, image) \n",
+    "        cv2.imshow('image', image)\n",
+    "        \n",
+    "        # press Enter to continue\n",
+    "        cv2.waitKey()\n",
+    "\n",
+    "    count += 1\n",
+    "    \n",
+    "cv2.destroyAllWindows()\n",
+    "vidcap.release()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11623\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OpenCV Version: 3.4.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "(major_ver, minor_ver, subminor_ver) = (cv2.__version__).split('.')\n",
+    "print('OpenCV Version: {}.{}.{}'.format(major_ver, minor_ver, subminor_ver))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save all frames into data directory\n",
+    "vidcap = cv2.VideoCapture('fishvid.mp4')\n",
+    "success, image = vidcap.read()\n",
+    "\n",
+    "count = 0\n",
+    "while success:\n",
+    "    \n",
+    "    success, image = vidcap.read()\n",
+    "\n",
+    "    # save frame as JPEG file \n",
+    "    # mkdir data beforehand\n",
+    "    cv2.imwrite(\"./data/frame%d.jpg\" % count, image) \n",
+    "    count += 1\n",
+    "    \n",
+    "cv2.destroyAllWindows()\n",
+    "vidcap.release()"
+   ]
   }
  ],
  "metadata": {
@@ -163,7 +282,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.5.6"
   }
  },
  "nbformat": 4,
