w net resize and convert to greyscale

--- a/data.ipynb
+++ b/data.ipynb
@@ -34,7 +34,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x1068127b8>"
+       "<IPython.lib.display.YouTubeVideo at 0x10dd4d9b0>"
       ]
      },
      "execution_count": 1,
@@ -69,7 +69,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x10662af28>"
+       "<IPython.lib.display.YouTubeVideo at 0x10dd4d438>"
       ]
      },
      "execution_count": 2,
@@ -104,7 +104,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x1068374a8>"
+       "<IPython.lib.display.YouTubeVideo at 0x10dd71518>"
       ]
      },
      "execution_count": 3,
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,6 +264,13 @@
     "cv2.destroyAllWindows()\n",
     "vidcap.release()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
